# opencv_example

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cuda_example/: CMakeLists.txt  README.md  opencv_cuda_example.cpp
image/: sidefrontleft_960_512_nv12.yuv
image/car/: infrared_640_512_nv12.yuv  rear_1920_1024_nv12.yuv  sideleftfront_960_512_nv12.yuv  sideleftrear_960_512_nv12.yuv  siderightfront_960_512_nv12.yuv  siderightrear_960_512_nv12.yuv
output/: conanfile.py
py/: jpeg_generate.py  qr_generate.py
src/: mat.cpp  nchw2yuv.cpp  qr_code.cpp  qr_decode.cpp  raw_image.cpp  undistor.cpp  video_writer.cpp
